--- a/scss/mentor.scss
+++ b/scss/mentor.scss
@@ -10,7 +10,7 @@
         box-sizing: border-box;
         width:1220px;
         margin: 0 auto;
-        padding: 15px;
+        padding: $paddingS;
         padding-top: 50px;
         h1{
             text-align: center;
