--- a/scss/qoute.scss
+++ b/scss/qoute.scss
@@ -8,7 +8,7 @@
     }
     .qoute-conteiner{
         box-sizing: border-box;
-        padding: 15px;
+        padding: $paddingS;
         padding-top: 65px;
         width: 1220px;
         margin: 0 auto;
