--- a/css/down.css
+++ b/css/down.css
@@ -8,7 +8,7 @@
 #contacts .contacts-container .contacts-list {
   box-sizing: border-box;
   display: flex;
-  padding: 20px 15px;
+  padding: 15px;
   margin: 0px auto;
   width: 1220px;
 }
