--- a/scss/video.scss
+++ b/scss/video.scss
@@ -9,7 +9,7 @@
         box-sizing: border-box;
         width: 1220px;
         margin: 0 auto;
-        padding: 30px 15px;
+        padding: 30px $paddingS;
 
         .title-dis {
             text-align: center;
@@ -21,7 +21,7 @@
             }
 
             p {
-                padding-top: 15px;
+                padding-top: $paddingS;
             }
         }
 
